check github is working

--- a/trial.html
+++ b/trial.html
@@ -16,6 +16,11 @@
 </style>
 </head>
 <body>
+    <span id="a">Ayush</span>
     <div class="box">Content inside the box</div>
+    <script>
+        var span = document.getElementById("a").innerText;
+        console.log(span);
+    </script>
 </body>
 </html>
